@@ -118,6 +118,8 @@ _mulsint (int a, int b)		// obsolete
 
 #elif defined _MULINT_ASM_SMALL || defined _MULINT_ASM_SMALL_AUTO
 
+/* the return value is (unsigned) int, but to hush the compiler
+ * we choose void here: */
 void
 _mulint_dummy (void) _naked
 {
